# StudentProject

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/face_detector/: TurnServo.h  TurnServoRequest.h  TurnServoResponse.h
devel/include/rosserial_arduino/: TestRequest.h  TestResponse.h
devel/include/rosserial_mbed/: Adc.h
devel/include/rosserial_msgs/: Log.h  RequestParamRequest.h  RequestServiceInfoRequest.h  TopicInfo.h
devel/lib/face_detector/: face_detector_node
devel/lib/opencv_tutorial/: opencv_tutorial_node
devel/lib/pkgconfig/: face_detector.pc  opencv_tutorial.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_windows.pc  rosserial_xbee.pc  test_opencv.pc
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
install/include/rosserial_arduino/: Adc.h
install/include/rosserial_mbed/: TestRequest.h  TestResponse.h
install/include/rosserial_msgs/: RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamResponse.h  RequestServiceInfoResponse.h
install/lib/pkgconfig/: face_detector.pc  rosserial_client.pc  (+3 more)
src/face_detector/: CMakeLists.txt  package.xml  package.xml~
src/face_detector/arduino/controller/: controller.ino
src/face_detector/scripts/: controller.py  controller.py~
src/face_detector/src/: face_detector_node.cpp  face_detector_node.cpp~
src/face_detector/srv/: TurnServo.srv
src/opencv_tutorial/: CMakeLists.txt
(+49 files in other folders)
