<?xml version="1.0"?>
<package>
  <name>face_detector</name>
  <version>1.0.0</version>
  <description>This pacakge used as a face detector</description>
  
  <maintainer email="quannguyen2281995@gmail.com">Quan H. Nguyen</maintainer>
  <maintainer email="trinhtran2151995@gmail.com">Trinh N. P. Tran</maintainer>
  
  <license>BSD</license>
  
  <author email="quannguyen2281995@gmail.com">Quan H. Nguyen</author>
  <author email="trinhtran2151995@gmail.com">Trinh N. P. Tran</author>
  
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
  </export>
</package>
